fixed overflow for the list of users

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -30,6 +30,8 @@ body{
 	height: 83vh;
 	float: left;
 	background-color: #FFFFFF;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .list-row {
@@ -38,7 +40,7 @@ body{
 }
 
 .list-left {
-	width:310px;
+	width: 80%;
 	float:left;
 }
 
